# Qt-graph-calculator

./: CMakeLists.txt  README.md
.cache/clangd/index/: graphbuttons.cpp.3D9415BF3CE43CF1.idx  main.cpp.E0D79D64EAF602DC.idx  mainwindow.cpp.B45FE6F223C4EA6C.idx  mainwindow.h.682B274964644E17.idx  qcustomplot.cpp.3E0283EC57EDBF54.idx  qcustomplot.h.726D11462F317545.idx  scientificbuttons.cpp.38B3C22483941481.idx  setupgraphtab.cpp.0C57704B65EC761E.idx  setupscientifictab.cpp.2CB6A8C46B352464.idx  setupsolvertab.cpp.A1CEC9FF133B4D3C.idx  setupstandardtab.cpp.20328C8089DE1716.idx  solvertabbuttons.cpp.2D073AEE791947B8.idx  standardbuttons.cpp.9D6500CA83A3A0C8.idx
inc/: Calculator.h  EquationSolver.h  GraphRenderer.h  MainWindow.h  mainwindow.h
src/: handlebuttons.cpp  mainwindow.cpp  setupgraphtab.cpp
src/Calculator/: Calculator.cpp  CalculatorSlots.cpp
src/EquationSolver/: EquationSolver.cpp  EquationSolverSlots.cpp  EquationSolverUtils.cpp
src/Graph Tab/: graphbuttons.cpp  setupgraphtab.cpp
src/GraphRenderer/: GraphRenderer.cpp  GraphRendererSlots.cpp  GraphRendererUtils.cpp
src/MainWindow/: MainWindow.cpp  MainWindowTab.cpp
src/Scientific Tab/: scientificbuttons.cpp  setupscientifictab.cpp
src/Solver Tab/: setupsolvertab.cpp  solvertabbuttons.cpp
src/Standard Tab/: setupstandardtab.cpp  standardbuttons.cpp
